--- a/src/assets/sass/_masthead.scss
+++ b/src/assets/sass/_masthead.scss
@@ -6,12 +6,12 @@ header.masthead {
   padding-top: 150px;
   padding-bottom: 100px;
 
-  color: white;
-  background: url('../images/bg-pattern.png'), $theme-secondary;
-  background: url('../images/bg-pattern.png'),
-    -webkit-linear-gradient(to left, $theme-secondary, $theme-tertiary);
-  background: url('../images/bg-pattern.png'),
-    linear-gradient(to left, $theme-secondary, $theme-tertiary);
+  // color: $the;
+  // background: url('../images/bg-pattern.png'), $theme-secondary;
+  // background: url('../images/bg-pattern.png'),
+  //   -webkit-linear-gradient(to left, $theme-secondary, $theme-tertiary);
+  // background: url('../images/bg-pattern.png'),
+  //   linear-gradient(to left, $theme-secondary, $theme-tertiary);
   .header-content {
     max-width: 500px;
     margin-bottom: 100px;
