--- a/src/assets/sass/_contact.scss
+++ b/src/assets/sass/_contact.scss
@@ -1,6 +1,7 @@
 // Styling for the download section
 section.contact {
     text-align: center;
+    color: white;
     h2 {
         margin-top: 0;
         margin-bottom: 25px;
