--- a/src/assets/sass/_download.scss
+++ b/src/assets/sass/_download.scss
@@ -2,6 +2,7 @@
 section.download {
     position: relative;
     padding: 150px 0;
+    color: white;
     h2 {
         font-size: 50px;
         margin-top: 0;
